<resources>
    <string name="app_name">Sirene</string>
    <string name="text_recherche">Rechercher une entreprise</string>
    <string name="no_result_found">Aucun résultat trouvé</string>
    <string name="detail_company_activity">Fiche Entreprise</string>
    <string name="history_research_activity">Historique</string>
    <string name="company_name_detail">%s</string>
    <string name="company_name_label">Entreprise</string>
    <string name="company_activity_detail">%s</string>
    <string name="company_activity_label">Activité principale</string>
    <string name="company_adress_detail">%s</string>
    <string name="company_adress_label">Adresse</string>
    <string name="company_siren_detail">%s</string>
    <string name="company_siren_label">SIREN</string>
    <string name="company_siret_detail">%s</string>
    <string name="company_siret_label">SIRET</string>
    <string name="company_date_creation_detail">%s</string>
    <string name="company_start_label">Date de début d\'activité</string>
    <string name="company_juridical_detail">%s</string>
    <string name="company_juridical_label">Statut</string>
    <string name="button_reconnection">Reconnexion</string>
    <string name="connection">Connexion</string>
    <string name="no_connection">Aucune connexion internet trouvée. Verifié votre connexion ou essayé à nouveau, la recherche est momentanément désactivée</string>
    <string name="retry">Réessayer</string>
    <string name="close">Fermer</string>
    <string name="department">Departement : </string>
    <string name="department_hint">Dep.</string>
    <string name="postal_hint">Postal.</string>
    <string name="code_naf_hint">NAF/APE</string>
    <string name="postal">Code postal :</string>
    <string name="history">Historique</string>
    <string name="recent">Aujourd\'hui</string>
    <string name="previous">Recherches précédentes</string>
    <string name="company">Entreprise</string>
    <string name="request_history">Recherche : </string>
    <string name="title_delete">Supprimer la sélection</string>
    <string name="codeNaf">Code NAF :</string>
    <string name="activity">Activité :</string>
    <string name="activity_hint">Libellé activité</string>
    <string name="naf">Code NAF :</string>
    <string name="wrong_entry">Informations saisies incorrect !</string>
</resources>