<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/text_recherche"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:id="@+id/labelQuery"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>

    <EditText
        android:id="@+id/editSearchCompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelQuery"
        android:layout_marginStart="5dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="5dp"
        android:layout_toStartOf="@id/buttonSearchCompany"
        android:autofillHints=""
        android:background="@drawable/custom_research"
        android:hint="@string/company"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <ImageButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/buttonSearchCompany"
        android:layout_below="@id/labelQuery"
        android:layout_alignTop="@id/editSearchCompany"
        android:layout_alignBottom="@id/editSearchCompany"
        android:background="@drawable/icon_research"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editSearchCompany"
        android:padding="10dp"
        android:text="@string/department"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editDepartment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editSearchCompany"
        android:layout_alignTop="@id/department"
        android:textAlignment="center"
        android:layout_alignBottom="@id/department"
        android:layout_toEndOf="@id/department"
        android:background="@drawable/custom_research"
        android:inputType="number"
        android:hint="@string/department_hint"
        android:maxLength="2" />

    <TextView
        android:id="@+id/postal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editSearchCompany"
        android:layout_toEndOf="@id/editDepartment"
        android:padding="10dp"
        android:text="@string/postal"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editPostal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editSearchCompany"
        android:layout_alignTop="@id/postal"
        android:layout_alignBottom="@id/postal"
        android:layout_toEndOf="@id/postal"
        android:textAlignment="center"
        android:hint="@string/postal_hint"
        android:background="@drawable/custom_research"
        android:inputType="number"
        android:maxLength="5" />

    <ListView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/listCompanySearch"
        android:padding="10dp"
        android:layout_below="@id/editDepartment"/>

    <ProgressBar
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/progressBarSearchCompany"
        android:visibility="invisible"
        android:layout_below="@id/textNoResult"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/textNoResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editPostal"
        android:layout_centerInParent="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/no_result_found"
        android:textColor="#616161"
        android:textStyle="bold|italic"
        android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonReconnection"
        android:text="@string/button_reconnection"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

</RelativeLayout>